[xh] update from Pootle (firefox)

--- a/xh/browser/chrome/browser/browser.properties
+++ b/xh/browser/chrome/browser/browser.properties
@@ -74,6 +74,7 @@ lwthemeInstallRequest.allowButton.accesskey=a
 
 lwthemePostInstallNotification.message=Umxholo omtsha ufakelwe.
 lwthemePostInstallNotification.undoButton=Qhaqha okwenzileyo
+lwthemePostInstallNotification.undoButton.accesskey=U
 lwthemePostInstallNotification.manageButton=Lawula imixholo…
 lwthemePostInstallNotification.manageButton.accesskey=M
 
@@ -450,8 +451,10 @@ webapps.install.success = Iaplikheyishini ifakelwe
 webapps.install.inprogress = Ufakelo lusaqhuba
 webapps.uninstall = Susa okuhlohliweyo
 webapps.uninstall.accesskey = U
+webapps.doNotUninstall = Musa ukungafakeli
 webapps.doNotUninstall.accesskey = D
 #LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
+webapps.requestUninstall = Ingaba ufuna ukungafakeli "%1$S"?
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=I%S ngoku ikwisikrini esipheleleyo.
@@ -519,7 +522,9 @@ getUserMedia.selectScreen.accesskey=I
 getUserMedia.selectApplication.label=Usetyenziso lokwabelana
 getUserMedia.selectApplication.accesskey=U
 getUserMedia.noVideo.label = Akukho Vidiyo
+getUserMedia.noApplication.label = Ayikho iAplikheshini
 getUserMedia.noScreen.label = Akukho Skrini
+getUserMedia.noWindow.label = Ayikho iFestile\u0020
 getUserMedia.noAudio.label = Akukho Sandi
 getUserMedia.shareEntireScreen.label = Sonke iskrini
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
@@ -535,6 +540,7 @@ getUserMedia.shareApplicationWindowCount.label=#1 (#2 ifestile);#1 (#2 ifestile)
 getUserMedia.shareSelectedDevices.label = Yabelana ngezixhobo ezikhethiweyo;Yabelana ngezixhobo ezikhethiweyo
 getUserMedia.shareSelectedDevices.accesskey = Y
 getUserMedia.shareScreen.label = Yabelana ngeskrini
+getUserMedia.shareApplication.label = Yabelana Ngosetyenziso Olukhethiweyo
 getUserMedia.shareWindow.label = Yabelana ngewindowu ekhethiweyo
 getUserMedia.shareSelectedItems.label = Yabelana ngezinto ezikhethiweyo
 getUserMedia.always.label = Yabelana qho
@@ -546,6 +552,7 @@ getUserMedia.never.accesskey = U
 getUserMedia.sharingCamera.message2 = Wabelana ngekhamera yakho kweli phepha.
 getUserMedia.sharingMicrophone.message2 = Wabelana ngomboko wakho kweli phepha.
 getUserMedia.sharingCameraAndMicrophone.message2 = Wabelana ngekhamera nomboko wakho kweli phepha.
+getUserMedia.sharingApplication.message = Ngoku wabelana ngosetyenziso lwakho neli khasi.
 getUserMedia.sharingScreen.message = Wabelana ngeskrini sakho neli phepha.
 getUserMedia.sharingWindow.message = Wabelana ngewindowu yakho neli phepha.
 getUserMedia.continueSharing.label = Qhubeka usabelana
