--- a/xh/browser/chrome/browser/loop/loop.properties
+++ b/xh/browser/chrome/browser/loop/loop.properties
@@ -9,6 +9,7 @@ share_link_header_text=Yabelana ngeli khonkco ukumema umntu ukuba athethe:
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
 ## Click the label icon at the end of the url field.
+invitee_name_label=Ngubani ommemayo?
 ## LOCALIZATION NOTE(invitee_expire_days_label): Allows the user to adjust
 ## the expiry time. Click the label icon at the end of the url field to see where
 ## this is:
@@ -16,6 +17,7 @@ share_link_header_text=Yabelana ngeli khonkco ukumema umntu ukuba athethe:
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
+invitee_expire_days_label=Isimemo siyakuphelelwa kusuku {{ixesha_lokuphelelwa}}: Isimemo siyakuphelelwa kwiintsuku {{ixesha_lokuphelelwa}}\u0020
 ## LOCALIZATION NOTE(invitee_expire_hours_label): Allows the user to adjust
 ## the expiry time. Click the label icon are the end of the url field to see where
 ## this is:
@@ -23,8 +25,10 @@ share_link_header_text=Yabelana ngeli khonkco ukumema umntu ukuba athethe:
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
+invitee_expire_hours_label=Isimemo siyakuphelelwa kwiyure {{ixesha_lokuphelelwa}}; Isimemo siyakuphelelwa kwiiyure {{ixesha_lokuphelelwa}}
 
 # Status text
+display_name_guest=Iindwendwe
 display_name_dnd_status=Musa ukuphazamisa
 display_name_available_status=Iyafumaneka
 
@@ -33,17 +37,36 @@ display_name_available_status=Iyafumaneka
 ## These may be displayed at the top of the panel here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 unable_retrieve_url=Uxolo, asibanga nakho ukubuyisela i-url.\u0020
+session_expired_error_description=Iseshini iphelelwe. Zonke ii- URLs ubuzenzile waze wabelana ngazo azokube ziphinde zisebenze.
+could_not_authenticate=Akungininiseki
+password_changed_question=Ingaba uyitshintshile iphasiwedi yakho?
+try_again_later=Nceda uzame kwakhona ngelinye ithuba
+could_not_connect=Ayikwazanga ukunxulumana neseva
+check_internet_connection=Nceda ukhangele unxulumano lwe-intanethi yakho
+login_expired=I-login yakho iphelelwe
+service_not_available=Inkonzo ayifumaneki ngelithuba
+problem_accessing_account=Kubekho ingxaki yokufumaneka kwe-akhawunti yakho
 
 ## LOCALIZATION NOTE(retry_button): Displayed when there is an error to retry
 ## the appropriate action.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
+retry_button=Phinda uzame
 
+share_email_subject3=Umenyelwe kwincoko
 ## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
+share_email_body3=Ukusamkela esisimemo, vela ukope okanye ucofe kwesi siqhagamshelo uqale incoko yakho: \n \n{{callUrl}}
+share_button=Imeyili
 copy_url_button=Kopa
+copied_url_button=Ikopiwe
 
+panel_footer_signin_or_signup_link=Sayina ungene okanye usayino\u0020
 
+settings_menu_item_account=I-akhawunti
+settings_menu_item_settings=Imimiselo
+settings_menu_item_signout=Phuma
 settings_menu_item_signin=Sayina uNgene
+settings_menu_button_tooltip=Imimiselo
 
 # Contact Strings (Panel)
 
@@ -55,49 +78,66 @@ contacts_search_placesholder=Khangela…
 ## new contact sub-panel.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## for where this appears on the UI
+new_contact_button=Abatsha Oqhagamshelana Nabo
 ## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
 ## These are the placeholders for the fields for entering a new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## and click the 'New Contact' button to see the fields.
+new_contact_name_placeholder=Igama
+new_contact_email_placeholder=Imeyili
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## and click the 'New Contact' button to see the fields.
+add_contact_button=Yongeza Oqhagamshelana Nabo
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
+valid_email_text_description=Nceda ungenise idilesi ye-imeyile esemthethweni.
 
 ## LOCALIZATION NOTE (add_or_import_contact_title): This is the subtitle of the panel
 ## at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+add_or_import_contact_title=Yongeza okanye Ngenisa umqhagamsheli
 ## LOCALIZATION NOTE (import_contacts_button, importing_contacts_progress_button):
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## for where these appear on the UI
+import_contacts_button=Ngenisa
 importing_contacts_progress_button=Kuthathwa ngaphandle…
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
+sync_contacts_button=Sayinka Abaqhagamsheli
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+import_failed_description_simple=Uxolo, uqhagamshelo olungenayo aluphumelelanga
 ## LOCALIZATION NOTE(import_failed_description): Displayed when an import of contacts
 ## fails and the user may need more help. In this item, don't translate the part between
 ## {{..}} because this will be replaced by the label from import_failed_support_link_label.
 ## This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+import_failed_description=Uxolo, uqhagamshelo olungenayo aluphumelelanga, nceda ujonge i {{import_failed_support_link_label}} yethu ukuze ufumane uncedo
+import_failed_support_link_label=isayithi yenkxaso
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+remove_contact_menu_button=Susa uqhagamshelo
 ## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
 ## to confirm deletion of a contact.
+confirm_delete_contact_alert=Uqinisekile ufuna ukucima lo mqhagamsheli?
 ## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
 ## These are displayed on the alert with confirm_delete_contact_alert
+confirm_delete_contact_remove_button=Susa uqhagamshelo
+confirm_delete_contact_cancel_button=Rhoxisa
 
 ## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to block a contact from calling
 ## the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+block_contact_menu_button=Thintela uqhagamshelo
 ## LOCALIZATION NOTE(unblock_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to unblock a contact and allow them
 ## to call the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+unblock_contact_menu_button=Khulula uqhagamshelo
 
 ## LOCALIZATION NOTE(edit_contact_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
@@ -112,18 +152,28 @@ importing_contacts_progress_button=Kuthathwa ngaphandle…
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_done_button=Kugqityiwe
 
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+audio_call_menu_button=Incoko eneSandi
 
 ## LOCALIZATION NOTE(video_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+video_call_menu_button=Incoko yevido
 
 # Conversation Window Strings
 
+initiate_call_button_label2=Ukulungele ukuqala incoko yakho?
+incoming_call_title2=Isicelo sencoko
+incoming_call_accept_button=Yamkela
+incoming_call_accept_audio_only_tooltip=Yamkela ngelizwi
+incoming_call_cancel_button=Rhoxisa
+incoming_call_cancel_and_block_button=Rhoxisa uthintele
 incoming_call_block_button=Thintela
+hangup_button_title=Beka umnxeba
 hangup_button_caption2=Phuma
 mute_local_audio_button_title=Thulisa okunesandi
 unmute_local_audio_button_title=Khalisa okunesandi
@@ -134,26 +184,41 @@ unmute_local_video_button_title=Khalisa ividiyo
 ## when calling a contact. Don't translate the part between {{..}} because
 ## this will be replaced by the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_with_contact_title=Incoko no {{contactName}}
 
 # Outgoing conversation
 
+outgoing_call_title=Qala incoko?
 initiate_audio_video_call_button2=Qala
+initiate_audio_video_call_tooltip2=Qala incoko yevido
+initiate_audio_call_button2=Incoko yelizwi
+initiate_call_cancel_button=Rhoxisa
 
 ## LOCALIZATION NOTE (call_progress_connecting_description): This is displayed
 ## whilst the client is contacting the client at the other end of the connection
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_connecting_description=Iyaqhagamshela...
 ## LOCALIZATION NOTE (call_progress_ringing_description): This is displayed
 ## when the other client is actually ringing.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_ringing_description=Iyakhala...
 
+peer_ended_conversation2=Umntu umtsalela umnxeba uyiyekisile incoko.
+conversation_has_ended=Incoko yakho ifikelele esiphelweni.
+restart_call=Phinda ujoyine
 
+generic_failure_title=Kukho into engenzekanga kakuhle.
+generic_failure_with_reason2=Ungazama kwakhona okanye yenza imeyile yelinki apha ungafunyanwa khona emva kwethuba.
+generic_failure_no_reason2=Ungathanda ukuphinda uzame?
 
 ## LOCALIZATION NOTE (contact_offline_title): Title for
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
 ## displayed when the contact is offline.
+contact_offline_title=Lo mntu akakho kwilayini ye-intanethi
 ## LOCALIZATION NOTE (call_timeout_notification_text): Title for
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
 ## displayed when the call didn't go through.
+call_timeout_notification_text=I-kholi yakho khange iphumele.
 
 ## LOCALIZATION NOTE (retry_call_button, cancel_button, email_link_button):
 ## These buttons are displayed when a call has failed:
@@ -168,16 +233,30 @@ connection_error_see_console_notification=Umnxeba awuphumelanga; jonga kwintuthu
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
 ## by the brand name, or fall back to client_shortname_fallback
-  and {{privacy_notice}}.
+legal_text_and_links3=Ngokusebenzisa {{clientShortname}} uyayivuma imi {{terms_of_use}} ne {{privacy_notice}}
+legal_text_tos = Imigaqo yosetyenziso
 legal_text_privacy = Isaziso sabucala
+client_shortname_fallback=le mveliso
 
+feedback_call_experience_heading2=Ibe njani incoko yakho?
+feedback_what_makes_you_sad=Yintoni ekwenze wakhathazeka?
+feedback_thank_you_heading=Siyabulela ngengxelo nkqubo
+feedback_category_audio_quality=Umgangatho wesandi
+feedback_category_video_quality=umgangatho we-vido
+feedback_category_was_disconnected=uqhawulwe
+feedback_category_confusing=Iyabhida
+feedback_custom_category_text_placeholder=Yintoni engahambanga kakuhle
+feedback_submit_button=Ngenisa
 feedback_back_button=Emva
 ## LOCALIZATION NOTE (feedback_window_will_close_in2):
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
+feedback_window_will_close_in2=Le festile izakuvala kwimizuzu eyi {{countdown}}: Le festile izakuvala kwimizuzu eyi {{countdown}}
 ## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
 ## a signed-in to signed-in user call.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
+feedback_rejoin_button=Phinda ujoyine
 ## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
 ## an abusive user.
+feedback_report_user_button=Xela umsebenzisi
