--- a/xh/browser/chrome/browser/newTab.properties
+++ b/xh/browser/chrome/browser/newTab.properties
@@ -19,9 +19,12 @@ newtab.sponsored.explain=Esi sihloko siboniswayo  kuwe egameni lomlingane kaMozi
 newtab.enhanced.explain=Umlingane kaMozilla uyiphucule ngembonakalo lethayile, endaweni yesikrinishoti. Ungacima iithayile eziphuculweyo ngokucofa iqhosha i %1$S ngokuzikhethela. %2$S
 # LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
 # active link using string newtab.learn.link as text.
+newtab.intro.paragraph1=Xa uvula ithebhu entsha, uyakubona iithayile ezisuka kwisayithi oqhele ukuyindwendwela, kunye neethayile esicinga ukuba zinokuba nomdla kuwe. Ezinye zezithayile zinokuxhaswa ngabalingane bakaMozila. Sakusoloko sisitsho kuwe ukuba zeziphi iithayile oxhaswa kuzo. %1$S
 # LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
 # active link using string newtab.privacy.link as text.
+newtab.intro.paragraph2=Ukuze sikwazi ukuzisa iinkonzo, iMozilla iqokelela ize isebenzise iinkcukacha ezithile zohlalutyo ezigqamane nokusetyenziswa kweethayile ngokumalunga ne-%1$S yethu.
 # LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
 # the gear icon used to customize the new tab window.
+newtab.intro.paragraph3=Ungayicima ifitsha yeethayile ngokucofa iqhosha %1$S ngokuzikhethela
 newtab.learn.link=Funda okungakumbi…
 newtab.privacy.link=Isaziso sabucala
