--- a/xh/browser/chrome/browser/shellservice.properties
+++ b/xh/browser/chrome/browser/shellservice.properties
@@ -12,6 +12,8 @@ setDefaultBrowserConfirm.label     = Sebenzisa %S njengebhrawuza yam yesiseko
 setDefaultBrowserConfirm.accesskey = S
 setDefaultBrowserOptions.label     = Ekunokukhethwa kuko
 setDefaultBrowserOptions.accesskey = E
+setDefaultBrowserNotNow.label      = Hayi ngoku
+setDefaultBrowserNotNow.accesskey  = H
 setDefaultBrowserNever.label       = Ungaphindi undibuze
 setDefaultBrowserNever.accesskey   = U
 
