--- a/xh/dom/chrome/accessibility/AccessFu.properties
+++ b/xh/dom/chrome/accessibility/AccessFu.properties
@@ -7,12 +7,62 @@ screenReaderStarted = Isifundi-sikrini siqalisiwe
 screenReaderStopped = Isifundi-sikrini simisiwe
 
 # Roles
+menubar        =       umgca wemenyu
+scrollbar      =       umgca wokuhlisa usenyusa
+grip           =       igriphu
+alert          =       lumka
+menupopup      =       imenyu ezivelelayo
+document       =       uxwebhu
+pane           =       ipheyini
+dialog         =       ingxoxo\u0020
+separator      =       isihlukanisi
+toolbar        =       ithulbha
+statusbar      =       umgca wobume
 table          =       itafile
+columnheader   =       isihloko sekholam
+rowheader      =       isihloko serowu
+column         =       ikholam
+row            =       irowu
+cell           =       iseli
 link           =       ikhonkco
+list           =       uluhlu
+listitem       =       dwelisa into
+outline        =       isishwankathelo
+outlineitem    =       iayithem yesishwankathelo
+pagetab        =       ithebhu
+propertypage   =       iphepha lepropati
+graphic        =       igrafikhi
 pushbutton     =       iqhosha
+checkbutton    =       iqhosha lokukhangela
+radiobutton    =       iqhosha likanomathotholo
+combobox       =       ibhokisi yekhombo
+progressbar    =       ibha yenkqubela
+slider         =       isilayida
+spinbutton     =       iqhosa lokujikelezisa
+diagram        =       idayagram
+animation      =       umhombiso
+equation       =       ulingano
+buttonmenu     =       imenyu yeqhosha
+whitespace     =       indawo emhlophe
+pagetablist    =       uluhlu lwethebhu
+canvas         =       ikhanvasi
+checkmenuitem  =       khangela i-ayithem yemenyu
 passwordtext   =       umbhalo wepasiwedi
+header         =       isihloko
+footer         =       okubhalwa emazantsi ephepha
+caption        =       ikhepshini
+heading        =       Isihloko
+section        =       icandelo
+form           =       ifomu
+comboboxlist   =       uluhlu lweebhokisi zekhombo
+comboboxoption =       ukhetho kwibhokisi yekhombo
 imagemap       =       imephu yomfanekiso
+listboxoption  =       ukhetho
+listbox        =       ibhokisi yoluhlu
+flatequation   =       ulingano olusicaba
 figure         =       inani
+term           =       igama
+definition     =       inkcaza
 
 # More sophisticated roles which are not actual numeric roles
 textarea       =       indawo yombhalo
@@ -37,6 +87,7 @@ listItemsCount =       1 iayithem;#1 ii-ayithem
 # LOCALIZATION NOTE: # %1$S is the position of the item n the set.
 # %2$S is the total number of such items in the set.
 # An expanded example would read "2 of 5".
+objItemOfN      =       %1$S ye %2$S
 
 # Landmark announcements
 banner         =       ibhena
@@ -125,12 +176,50 @@ quicknav_Table       = Iitafile
 quicknav_Checkbox    = Khangela iibhokisi
 
 # Shortened role names for braille
+scrollbarAbbr      =       umgca wokuhlisa usenyusa
+alertAbbr          =       lumka
+menupopupAbbr      =       imenyu ezivelelayo
+documentAbbr       =       uxwebhu
+paneAbbr           =       ipheyini
+dialogAbbr         =       ingxoxo
+separatorAbbr      =       isihlukanisi
+toolbarAbbr        =       ithulbha
+statusbarAbbr      =       ibha yobume
 tableAbbr          =       tbl
+columnheaderAbbr   =       isihloko sekholam
+rowheaderAbbr      =       isihloko serowu
+columnAbbr         =       ikholam
+rowAbbr            =       irowu
 linkAbbr           =       l-inki
+propertypageAbbr   =       iphepha lepropati
+graphicAbbr        =       igrafikhi
 pushbuttonAbbr     =       i-btn
+checkbuttonAbbr    =       iqhosha lokukhangela
+radiobuttonAbbr    =       iqhosha likanomathotholo
+comboboxAbbr       =       ibhokisi yekhombo
+progressbarAbbr    =       ibha yenkqubela
+sliderAbbr         =       isilayida
+spinbuttonAbbr     =       iqhosa lokujikelezisa
+diagramAbbr        =       idayagram
+animationAbbr      =       uhombiso
 passwordtextAbbr   =       i-passwdtxt
+textcontainerAbbr  =       isigcini sombhalo
+togglebuttonAbbr   =       iqhosha le-toggle
+treetableAbbr      =       itheyibhile yomthi
+headerAbbr         =       isihloko
+footerAbbr         =       okubhalwa emazantsi ephepha
+paragraphAbbr      =       umhlathi
+entryAbbr          =       ufakelo
+captionAbbr        =       ikhepshini
+headingAbbr        =       Isihloko
+comboboxoptionAbbr =       ukhetho kwibhokisi yekhombo
 imagemapAbbr       =       imgmaphu
+gridcellAbbr       =       iseli yegridi
+noteAbbr           =       Qaphela
 figureAbbr         =       inani
+definitionlistAbbr =       uluhlu lwenkcazelo
+termAbbr           =       igama
+definitionAbbr     =       inkcazelo
 textareaAbbr       =       i-txtarea
 
 # LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
