--- a/xh/webapprt/webapprt/webapp.properties
+++ b/xh/webapprt/webapprt/webapp.properties
@@ -42,8 +42,12 @@ webapps.install.install=Fakela i-App
 webapps.install.dontinstall=Sukufakela
 # LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
 # of the webapp being uninstalled.
+webapps.uninstall.title=Khupha %S
 # LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
 # name of the webapp being uninstalled.
+webapps.uninstall.description=Uyafuna ukukhupha i-%S?
+webapps.uninstall.uninstall=Khupha i-App
+webapps.uninstall.dontuninstall=Sukukhupha
 
 paymentDialog.title=Intlawulo
 paymentDialog.message=Ngowuphi umboneleli wentlawulo ofuna ukumsebenzisa?
