--- a/xh/browser/chrome/browser/lightweightThemes.properties
+++ b/xh/browser/chrome/browser/lightweightThemes.properties
@@ -12,4 +12,7 @@ lightweightThemes.recommended-3.name=I-Linen Light
 lightweightThemes.recommended-3.description=I-Linen Light yi (C) DVemer. Ifumaneka phantsi ko- CC-BY-SA. Akukho waranti.
 
 lightweightThemes.recommended-4.name=I-Pastel Grandient
+lightweightThemes.recommended-4.description=I-Pastel Gradient yi (C) darrinhenein. Ifumaneka phantsi ko- CC-BY. Akukho waranti.
 
+lightweightThemes.recommended-5.name=I-Carbon Light
+lightweightThemes.recommended-5.description=I-Carbon Light yi (C) Jaxivo. Ifumaneka phantsi ko CC-BY-SA. Akukho waranti.
