--- a/xh/browser/chrome/browser/webrtcIndicator.properties
+++ b/xh/browser/chrome/browser/webrtcIndicator.properties
@@ -12,6 +12,7 @@ webrtcIndicator.windowtitle = %S - Isalathiso sokwabelana
 webrtcIndicator.sharingCameraAndMicrophone.tooltip = Ikhamera nemayikhrofowuni kwabelwana ngazo. Cofa ukulawula ukwabelana.
 webrtcIndicator.sharingCamera.tooltip              = Ikhamera yakho kwabelwana ngayo. Cofa ukulawula ukwabelana.
 webrtcIndicator.sharingMicrophone.tooltip          = Imayikhrofowuni yakho kwabelwana ngayo. Cofa ukulawula ukwabelana.
+webrtcIndicator.sharingApplication.tooltip = Usetyenziso kwabelwana ngalo. Cofa ukulawula ukwabelana.
 webrtcIndicator.sharingScreen.tooltip = Iskrini sakho kwabelwana ngaso. Cofa ukulawula ukwabelana.
 webrtcIndicator.sharingWindow.tooltip = Iwindowu kwabelwana ngayo. Cofa ukulawula ukwabelana.
 
@@ -23,6 +24,7 @@ webrtcIndicator.sharingWindow.tooltip = Iwindowu kwabelwana ngayo. Cofa ukulawul
 # %S is the title of the tab using the share.
 webrtcIndicator.sharingCameraWith.menuitem = Ukwabelana ngekhamera ne-"%S"
 webrtcIndicator.sharingMicrophoneWith.menuitem = Ukwabelana ngemayikhrofowuni ne-"%S"
+webrtcIndicator.sharingApplicationWith.menuitem = Yabelana ngosetyenziso kunye ne "%S"
 webrtcIndicator.sharingScreenWith.menuitem = Ukwabelana ngeskrini ne-"%S"
 webrtcIndicator.sharingWindowWith.menuitem = Ukwabelana ngewindowu ne-"%S"
 webrtcIndicator.controlSharing.menuitem = Lawula ukwabelana
@@ -37,6 +39,7 @@ webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Ukwabelana ngemayikhrofowu
 # LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingApplicationWithNTabs.menuitem = Yabelana ngosetyenziso nethebhu #1 ; Yabelana ngosetyenziso neethebhu #1
 # LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
