[qa] mobile: improved translations

--- a/sr/mobile/android/chrome/sync.properties
+++ b/sr/mobile/android/chrome/sync.properties
@@ -19,7 +19,7 @@ notificationDisconnect.button=Опозови
 # LOCALIZATION NOTE (sync.clientUpdate, sync.remoteUpdate):
 # #1 is the "application name"
 # #2 is the "version"
-sync.update.client=#1 #2 није компатибилан са најновијом верзијом Firefox Sync. Молимо да ажурирате до најновије верзије.
+sync.update.client=#1 #2 није компатибилан са најновијом верзијом Firefox Sync-а. Молимо да ажурирате до најновије верзије.
 sync.update.remote=#1 #2 није компатибилан са старијим верзијама Firefox Sync-а. Молимо да ажурирате Firefox на осталим рачунарима.
 sync.update.title=Firefox Sync
 sync.update.button=Сазнајте више
