--- a/sr/mobile/android/chrome/aboutDownloads.properties
+++ b/sr/mobile/android/chrome/aboutDownloads.properties
@@ -5,7 +5,7 @@
 # LOCALIZATION NOTE (downloadMessage.deleteAll):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
-downloadMessage.deleteAll=Избриши ову ставку?;Избриши #1 ставки?
+downloadMessage.deleteAll=Избриши ово преузимање?;Избриши #1 преузимања?
 
 downloadAction.deleteAll=Избриши све
 
@@ -13,5 +13,5 @@ downloadState.downloading=Преузимање…
 downloadState.canceled=Отказано
 downloadState.failed=Неуспешно
 downloadState.paused=Паузирано
-downloadState.starting=Почетак…
+downloadState.starting=Започињање…
 downloadState.unknownSize=Непозната величина
