--- a/sr/mobile/android/chrome/aboutReader.properties
+++ b/sr/mobile/android/chrome/aboutReader.properties
@@ -2,7 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-aboutReader.loading=Учитавам...
+aboutReader.loading=Учитавам…
 aboutReader.loadError=Неуспешно учитавање чланка са странице
 
 aboutReader.colorSchemeLight=Светло
