--- a/sr/mobile/overrides/appstrings.properties
+++ b/sr/mobile/overrides/appstrings.properties
@@ -24,13 +24,13 @@ proxyConnectFailure=Firefox је подешен да користи прокси
 contentEncodingError=Страница коју желите да прикажете не може бити приказана јер користи неисправан или неподржан вид компресије.
 unsafeContentType=Страница коју желите да прикажете не може бити приказана јер се налази унутар врсте датотеке која се не може безбедно отворити. Молимо да се обратите власницима сајта и обавестите их о овом проблему.
 externalProtocolTitle=Затражен је спољни протокол
-externalProtocolPrompt=Спољни програм мора бити покренут да би обрадио %1$S: везе. Тражена веза:\n\n\n%2$S\n\n\nАпликација: %3$S\n\n\nАко нисте очекивали овај захтев, то може бити начин да се искористи слабост тог спољног програма, прекините захтев, осим ако сте сигурни да захтев није злонамеран.\n
+externalProtocolPrompt=Спољна апликација мора бити покренута да би обрадила %1$S: везе. Тражена веза:\n\n\n%2$S\n\n\nАпликација: %3$S\n\n\nАко нисте очекивали овај захтев, то може бити начин да се искористи слабост те спољне апликације. Прекините захтев, осим ако сте сигурни да није злонамеран.\n
 #LOCALIZATION NOTE (externalProtocolUnknown): The following string is shown if the application name can't be determined
 externalProtocolUnknown=<Непознато>
 externalProtocolChkMsg=Запамти мој избор за све везе овог типа.
 externalProtocolLaunchBtn=Покрени апликацију
 malwareBlocked=Сајт на адреси %S је пријављен као злонамеран сајт и приступ њему је блокиран на основу безбедносних подешавања.
 phishingBlocked=Сајт на адреси %S је пријављен као веб фалсификат направљен како би кориснике навео на откривање личних или финансијских података.
-cspFrameAncestorBlocked=Ова страница има политику безбедности садржаја која је спречава да буде уграђена на овакав начин.
+cspFrameAncestorBlocked=Ова страница има полису безбедности садржаја која спречава да буде уграђена на овакав начин.
 corruptedContentError=Страница коју желите да погедате не може бити приказана услед грешке у преносу.
 remoteXUL=Ова страница користи неподржану технологију која више није доступна у подразумеваном издању Firefox-а.
