--- a/sr/mobile/android/chrome/pippki.properties
+++ b/sr/mobile/android/chrome/pippki.properties
@@ -30,12 +30,12 @@ certmgr.title=Детаљи сертификата
 certmgr.subjectinfo.label=Издато за
 certmgr.issuerinfo.label=Издато од
 certmgr.periodofvalidity.label=Период важења
-certmgr.fingerprints.label=Отисак прста
+certmgr.fingerprints.label=Отисак кључа
 certmgr.certdetail.cn=Општи назив
 certmgr.certdetail.o=Организација
 certmgr.certdetail.ou=Организациона јединица
 certmgr.certdetail.serialnumber=Серијски број
 certmgr.certdetail.sha256fingerprint=SHA-256 отисак кључа
 certmgr.certdetail.sha1fingerprint=SHA1 отисак кључа
-certmgr.begins=Почиње од
+certmgr.begins=Важи од
 certmgr.expires=Истиче
