--- a/pl/browser/chrome/browser/loop/loop.properties
+++ b/pl/browser/chrome/browser/loop/loop.properties
@@ -40,6 +40,7 @@ contacts_search_placesholder=Szukaj…
 new_contact_button=Nowy kontakt
 new_contact_name_placeholder=Nazwa
 new_contact_email_placeholder=E-mail
+contacts_blocked_contacts=Zablokowane kontakty
 add_contact_button=Dodaj kontakt
 valid_email_text_description=Proszę wprowadzić prawidłowy adres e-mail
 add_or_import_contact_title=Dodawanie i importowanie kontaktów
