Bug 1066358 - Improve how keyword autocomplete results are displayed

--- a/pl/browser/chrome/browser/places/places.properties
+++ b/pl/browser/chrome/browser/places/places.properties
@@ -75,6 +75,7 @@ OrganizerQueryTags=Etykiety
 tagResultLabel=Etykieta
 bookmarkResultLabel=Zakładka
 switchtabResultLabel=Karta
+keywordResultLabel=Słowo kluczowe
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
