--- a/es-CL/browser/chrome/browser/devtools/scratchpad.properties
+++ b/es-CL/browser/chrome/browser/devtools/scratchpad.properties
@@ -18,6 +18,7 @@ scratchpadIntro1 = /*\n * Este es un borrador de JavaScript.\n *\n * Ingrese un 
 scratchpad.noargs = El borrador fue creado sin ningún argumento.
 browserContext.notification = Este borrador se ejecuta en el contexto del navegador.
 help.openDocumentationPage = https://developer.mozilla.org/en/Tools/Scratchpad
+scratchpad.statusBarLineCol  = Línea %1$S, Columna %2$S
 fileNoLongerExists.notification = Este archivo ya no existe.
 propertiesFilterPlaceholder=Filtrar propiedades
 connectionTimeout = Tiempo de espera superado. Compruebe la Consola de errores en ambos extremos para encontrar mensajes de error potenciales. Reabra el borrador para intentar nuevamente.
