--- a/es-CL/browser/chrome/browser/loop/loop.properties
+++ b/es-CL/browser/chrome/browser/loop/loop.properties
@@ -42,6 +42,7 @@ contacts_search_placesholder=Buscar…
 new_contact_button=Nuevo contacto
 new_contact_name_placeholder=Nombre
 new_contact_email_placeholder=Correo
+contacts_blocked_contacts=Contactos bloqueados
 add_contact_button=Añadir contacto
 valid_email_text_description=Por favor, ingrese una dirección de correo válida
 add_or_import_contact_title=Añadir o importar contacto
