--- a/es-CL/toolkit/chrome/global/autocomplete.properties
+++ b/es-CL/toolkit/chrome/global/autocomplete.properties
@@ -7,3 +7,4 @@
 # the provider can also end with "Search" (e.g.: MSN Search).
 searchWithEngine = Buscar con %S
 switchToTab = Cambiar a la pestaña
+visitURL = Visitar %S
