--- a/es-CL/browser/chrome/browser/places/places.properties
+++ b/es-CL/browser/chrome/browser/places/places.properties
@@ -59,6 +59,7 @@ OrganizerQueryTags = Etiquetas
 tagResultLabel = Etiqueta
 bookmarkResultLabel = Marcador
 switchtabResultLabel=Pestaña
+keywordResultLabel=Palabra clave
 lockPrompt.title = Error de inicio del Navegador
 lockPrompt.text = El sistema de marcadores e historial no serán funcionales debido a que uno de los archivos de %S está ocupado por otra aplicación. Algunos programas de seguridad pueden causar este problema.
 lockPromptInfoButton.label = Saber más
