--- a/fr/toolkit/chrome/global/autocomplete.properties
+++ b/fr/toolkit/chrome/global/autocomplete.properties
@@ -7,3 +7,6 @@
 # the provider can also end with "Search" (e.g.: MSN Search).
 searchWithEngine = Rechercher avec %S
 switchToTab = Aller à l'onglet
+# LOCALIZATION NOTE (visitURL):
+# %S is the URL to visit.
+visitURL = Visiter %S
