[browser] Bug 1069965: add a visual separator between available and blocked contacts

--- a/fr/browser/chrome/browser/loop/loop.properties
+++ b/fr/browser/chrome/browser/loop/loop.properties
@@ -85,6 +85,9 @@ new_contact_button=Nouveau contact
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Nom
 new_contact_email_placeholder=Adresse électronique
+
+contacts_blocked_contacts=Contacts bloqués
+
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
