translation of files modified in Aurora browser.properties

--- a/uk/browser/chrome/browser/browser.properties
+++ b/uk/browser/chrome/browser/browser.properties
@@ -122,11 +122,11 @@ crashedpluginsMessage.learnMore=Дізнатись більше…
 # a local host page, by the time the DNS request recognizes it, we have already
 # loaded a search page for the given word.  An infobar then asks to the user
 # whether he rather wanted to visit the host.  %S is the recognized host.
-keywordURIFixup.message=Did you mean to go to %S?
-keywordURIFixup.goTo=Yes, take me to %S
-keywordURIFixup.goTo.accesskey=Y
-keywordURIFixup.dismiss=No thanks
-keywordURIFixup.dismiss.accesskey=N
+keywordURIFixup.message=Можливо, ви хотіли перейти на %S?
+keywordURIFixup.goTo=Так, перейти на %S
+keywordURIFixup.goTo.accesskey=Т
+keywordURIFixup.dismiss=Ні, дякую
+keywordURIFixup.dismiss.accesskey=Н
 
 ## Plugin doorhanger strings
 # LOCALIZATION NOTE (pluginActivateNew.message): Used for newly-installed
@@ -253,15 +253,15 @@ refreshBlocked.redirectLabel=%S втримав цю сторінку від ав
 # %S is the keyboard shortcut for "Show All Bookmarks"
 bookmarksMenuButton.tooltip=Показати ваші закладки (%S)
 # Star button
-starButtonOn.tooltip2=Edit this bookmark (%S)
-starButtonOff.tooltip2=Bookmark this page (%S)
+starButtonOn.tooltip2=Редагувати цю закладку (%S)
+starButtonOff.tooltip2=Закласти цю сторінку (%S)
 starButtonOverflowed.label=Закласти цю сторінку
 starButtonOverflowedStarred.label=Редагувати цю закладку
 
 # Downloads button tooltip
 # LOCALIZATION NOTE (downloads.tooltip):
 # %S is the keyboard shortcut for "Downloads"
-downloads.tooltip=Display the progress of ongoing downloads (%S)
+downloads.tooltip=Відобразити стан поточних завантажень (%S)
 
 # Print button tooltip on OS X
 # LOCALIZATION NOTE (printButton.tooltip):
@@ -278,7 +278,7 @@ newWindowButton.tooltip=Відкрити нове вікно (%S)
 # New Tab button tooltip
 # LOCALIZATION NOTE (newTabButton.tooltip):
 # %S is the keyboard shortcut for "New Tab"
-newTabButton.tooltip=Open a new tab (%S)
+newTabButton.tooltip=Відкрити нову вкладку (%S)
 
 # Offline web applications
 offlineApps.available=Цей сайт (%S) пропонує зберегти дані на ваш комп’ютер для доступності поза мережею.
@@ -420,22 +420,22 @@ browser.menu.showCharacterEncoding=false
 # LOCALIZATION NOTE (syncPromoNotification.bookmarks.label): This appears in
 # the add bookmark star panel.  %S will be replaced by syncBrandShortName.
 # The final space separates this text from the Learn More link.
-syncPromoNotification.bookmarks.description=Ви можете мати доступ до закладок на всіх ваших пристроях з допомогою %S.\u0020
+syncPromoNotification.bookmarks.description=Ви можете мати доступ до закладок на всіх ваших пристроях за допомогою %S.\u0020
 # LOCALIZATION NOTE (syncPromoNotification.passwords.label): This appears in
 # the remember password panel.  %S will be replaced by syncBrandShortName.
 # The final space separates this text from the Learn More link.
-syncPromoNotification.passwords.description=Ви можете мати доступ до паролів на всіх ваших пристроях з допомогою %S.\u0020
+syncPromoNotification.passwords.description=Ви можете мати доступ до паролів на всіх ваших пристроях за допомогою %S.\u0020
 syncPromoNotification.learnMoreLinkText=Дізнатись більше
 # LOCALIZATION NOTE (syncPromoNotification.addons.label): This appears in
 # the add-on install complete panel when Sync isn't set.
 # %S will be replaced by syncBrandShortName.
 # The final space separates this text from the Learn More link.
-syncPromoNotification.addons.description=Ви можете мати доступ до ваших додатків на всіх ваших пристроях з допомогою %S.\u0020
+syncPromoNotification.addons.description=Ви можете мати доступ до ваших додатків на всіх ваших пристроях за допомогою %S.\u0020
 # LOCALIZATION NOTE (syncPromoNotification.addons-sync-disabled.label):
 # This appears in the add-on install complete panel when Sync is set
 # but addons sync is not. %S will be replaced by syncBrandShortName.
 # The final space separates this text from the Learn More link.
-syncPromoNotification.addons-sync-disabled.description=Ви можете використовувати ваш акаунт %S щоб синхронізувати додатки на багатьох пристроях.\u0020
+syncPromoNotification.addons-sync-disabled.description=Ви можете використовувати ваш обліковий запис %S, щоб синхронізувати додатки на багатьох пристроях.\u0020
 
 # Mozilla data reporting notification (Telemetry, Firefox Health Report, etc)
 dataReportingNotification.message       = %1$S автоматично відправляє деякі дані у %2$S, щоб ми могли покращити ваш досвід.
@@ -449,15 +449,15 @@ webapps.install.accesskey = В
 webapps.requestInstall = Чи ви хочете встановити "%1$S" з цього сайта (%2$S)?
 webapps.install.success = Програму встановлено
 webapps.install.inprogress = Встановлення в процесі
-webapps.uninstall = Uninstall
-webapps.uninstall.accesskey = U
-webapps.doNotUninstall = Don't Uninstall
-webapps.doNotUninstall.accesskey = D
+webapps.uninstall = Видалити
+webapps.uninstall.accesskey = д
+webapps.doNotUninstall = Не видаляти
+webapps.doNotUninstall.accesskey = н
 #LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
-webapps.requestUninstall = Do you want to uninstall "%1$S"?
+webapps.requestUninstall = Ви хочете видалити "%1$S"?
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
-fullscreen.entered=%S тепер в повноекранному режиму
+fullscreen.entered=%S тепер у повноекранному режимі
 # LOCALIZATION NOTE (fullscreen.rememberDecision): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.rememberDecision=Запам’ятати рішення для %S
 
@@ -512,21 +512,21 @@ identity.loggedIn.signOut.accessKey = В
 #  %S is the website origin (e.g. www.mozilla.org)
 getUserMedia.shareCamera.message = Дати %S доступ до вашої камери?
 getUserMedia.shareMicrophone.message = Дати %S доступ до вашого мікрофону?
-getUserMedia.shareScreen.message = Would you like to share your screen with %S?
+getUserMedia.shareScreen.message = Чи бажаєте ділитись своїм дисплеєм із %S?
 getUserMedia.shareCameraAndMicrophone.message = Дати %S доступ до вашої камери та мікрофону?
-getUserMedia.shareScreenAndMicrophone.message = Would you like to share your microphone and screen with %S?
-getUserMedia.selectWindow.label=Window to share:
-getUserMedia.selectWindow.accesskey=W
-getUserMedia.selectScreen.label=Screen to share:
-getUserMedia.selectScreen.accesskey=S
-getUserMedia.selectApplication.label=Application to share:
-getUserMedia.selectApplication.accesskey=A
+getUserMedia.shareScreenAndMicrophone.message = Чи бажаєте ділитись своїм мікрофоном і дисплеєм із %S?
+getUserMedia.selectWindow.label=Спільне вікно:
+getUserMedia.selectWindow.accesskey=в
+getUserMedia.selectScreen.label=Спільний дисплей:
+getUserMedia.selectScreen.accesskey=д
+getUserMedia.selectApplication.label=Спільна програма:
+getUserMedia.selectApplication.accesskey=п
 getUserMedia.noVideo.label = Немає відео
-getUserMedia.noApplication.label = No Application
-getUserMedia.noScreen.label = No Screen
-getUserMedia.noWindow.label = No Window
+getUserMedia.noApplication.label = Немає програми
+getUserMedia.noScreen.label = Немає дисплея
+getUserMedia.noWindow.label = Немає вікна
 getUserMedia.noAudio.label = Немає аудіо
-getUserMedia.shareEntireScreen.label = Entire screen
+getUserMedia.shareEntireScreen.label = Увесь дисплей
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -538,23 +538,23 @@ getUserMedia.shareApplicationWindowCount.label=#1 (#2 window);#1 (#2 windows)
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # The number of devices can be either one or two.
 getUserMedia.shareSelectedDevices.label = Дати доступ до вибраного пристрою;Дати доступ до вибраних пристроїв;Дати доступ до вибраних пристроїв
-getUserMedia.shareSelectedDevices.accesskey = S
-getUserMedia.shareScreen.label = Share Screen
-getUserMedia.shareApplication.label = Share Selected Application
-getUserMedia.shareWindow.label = Share Selected Window
-getUserMedia.shareSelectedItems.label = Share Selected Items
+getUserMedia.shareSelectedDevices.accesskey = Д
+getUserMedia.shareScreen.label = Ділитись дисплеєм
+getUserMedia.shareApplication.label = Ділитись вибраною програмою
+getUserMedia.shareWindow.label = Ділитись вибраним вікном
+getUserMedia.shareSelectedItems.label = Ділитись вибраними елементами
 getUserMedia.always.label = Завжди дозволяти
 getUserMedia.always.accesskey = З
 getUserMedia.denyRequest.label = Не давати
 getUserMedia.denyRequest.accesskey = Н
 getUserMedia.never.label = Ніколи не дозволяти
-getUserMedia.never.accesskey = Н
+getUserMedia.never.accesskey = і
 getUserMedia.sharingCamera.message2 = Зараз ця сторінка має доступ до вашої камери.
 getUserMedia.sharingMicrophone.message2 = Зараз ця сторінка має доступ до вашого мікрофону.
 getUserMedia.sharingCameraAndMicrophone.message2 = Зараз ця сторінка має доступ до вашої камери та мікрофону.
-getUserMedia.sharingApplication.message = You are currently sharing an application with this page.
-getUserMedia.sharingScreen.message = You are currently sharing your screen with this page.
-getUserMedia.sharingWindow.message = You are currently sharing a window with this page.
+getUserMedia.sharingApplication.message = Зараз ви ділитесь програмою з цією сторінкою.
+getUserMedia.sharingScreen.message = Зараз ви ділитесь своїм дисплеєм з цією сторінкою.
+getUserMedia.sharingWindow.message = Зараз ви ділитесь вікном з цією сторінкою.
 getUserMedia.continueSharing.label = Не закривати доступ
 getUserMedia.continueSharing.accesskey = Н
 getUserMedia.stopSharing.label = Закрити доступ
